--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -2,4 +2,18 @@ ion-split-pane {
   div#menu-content {
     width: 100%;
   }
+  div.search-results-wrapper {
+    background-color: rgba(237, 237, 237, 1);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+    z-index: 2;
+  }
+  div.latest-games-slides {
+    ion-slides {
+      ion-slide {
+      }
+    }
+  }
 }
