--- a/src/components/game-card/game-card.scss
+++ b/src/components/game-card/game-card.scss
@@ -1,15 +1,35 @@
 .game-card {
-  border: 1px solid black;
-  div.header {
-    height: 30px;
-  }
+  box-shadow: 0 1px #ffffff inset, 0 1px 3px rgba(34, 25, 25, 0.4);
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 5px 0;
+
   div.body {
+    width: 100%;
+    height: 200px;
     img {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
+      object-fit: scale-down;
     }
   }
   div.footer {
-    height: 30px;
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    p.game-title {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      margin: 5px;
+      text-align: left;
+    }
+    div.game-details {
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      padding: 5px 10px 5px 5px;
+    }
   }
 }
